# AirportDirectory

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-dev-full.yml  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  mypy.ini  prometheus.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  ci_cd.yml  lint.yaml  test.yaml
alembic/: env.py
alembic/versions/: 2025_04_28_2125-04f4f0d95cc2_add_table_users.py  2025_05_26_1614-9d04e08b84cd_add_table_airports.py  2025_07_11_0909-64c2a98ffef8_add_table_citys.py  2025_07_11_0952-bdf939c377bf_add_data_to_table_citys.py  2025_07_16_1543-f67e8fa3bbce_add_is_verified_in_user.py  2025_08_20_1449-82a6f8c72524_new_table_commit.py
data/: air_bd.xlsx  airport_title.txt  city.xlsx
docker/: add_data.sh  app.sh  celery.sh  renew-certs.sh
grafana/: example-dashboard.json
nginx/: nginx.conf
nginx/test/: nginx.conf
src/: main.py
src/api_v1/: __init__.py
src/api_v1/airports/: crud.py  schemas.py  views.py
src/api_v1/auth/: crud.py  schemas.py  utils.py  views.py
src/api_v1/cities/: crud.py  schemas.py  views.py
src/api_v1/comments/: crude.py  schemas.py  views.py
src/api_v1/users/: crud.py  schemas.py  views.py
src/auth/: routers.py  utils.py
src/core/: config.py  database.py  depends.py  exceptions.py  jwt_utils.py
src/models/: __init__.py  airport.py  base.py  city.py  comment.py  user.py
src/tasks/: celery_conf.py  tasks.py
src/templates/: confirmation_email.html
src/users/: crud.py  models.py  routers.py
src/utils/: add_city_to_db.py  add_data_to_db.py  data_utils.py  geo_utils.py
static/: index.html
static/css/: airport.css  airport_detail.css  airports_nearest.css  auth.css  city.css  review.css  styles.css
static/img/foto/: undefined
static/js/: airport-data.js  app.js  cities-data.js
templates/: home.html  welcome.html
tests/: conftest.py  pytest.ini  test_airport.py  test_city.py  test_review.py  test_user.py
