[project]
name = "airportdirectory"
version = "0.1.0"
description = ""
authors = [
    {name = "Станислав Рубцов",email = "frex@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "geopy (>=2.4.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic-async-validation (>=0.3.0,<0.4.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "aiocache[redis] (>=0.12.3,<0.13.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
flake8 = "^7.2.0"

