[project]
name = "airportdirectory"
version = "0.1.0"
description = ""
authors = [
    {name = "Станислав Рубцов",email = "frex@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "geopy (>=2.4.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic-async-validation (>=0.3.0,<0.4.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "aiocache[redis] (>=0.12.3,<0.13.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "fastapi-pagination (>=0.13.1,<0.14.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
    "celery[types] (>=5.5.3,<6.0.0)",
    "eventlet (>=0.40.1,<0.41.0)",
    "flower (>=2.0.1,<3.0.0)",
    "types-authlib (>=1.6.0.20250809,<2.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
flake8 = "^7.2.0"
ruff = "^0.11.12"
pytest-asyncio = "^1.0.0"
pytest = "^8.4.0"
pre-commit = "^4.2.0"


[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
